deploying ID-SK Play templates 0.24.2

--- a/views/layouts/idsk_template.scala.html
+++ b/views/layouts/idsk_template.scala.html
@@ -90,7 +90,7 @@
 
           <div class="footer-meta-inner">
             <div class="open-government-licence">
-              <p class="logo"><a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence</a></p>
+              <!-- <p class="logo"><a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence</a></p> -->
               
                 @licenceMessage
               
